# http-server

./: .gitignore  CMakeLists.txt  README.md
include/: server.h
src/: main.c  server.c
